PDP page finalize 4.4 & add Home page

--- a/src/index.html
+++ b/src/index.html
@@ -188,7 +188,7 @@
             ></a>
           </li>
           <li class="list-item active">
-            <a href="#" class="link mainlink"
+            <a href="./pdp.html" class="link mainlink"
               >Products <i class="fa fa-angle-right icon"></i
             ></a>
           </li>
