PDP page finalize 4.5 update mobile  v

--- a/src/index.html
+++ b/src/index.html
@@ -368,7 +368,7 @@
           </h3>
           <h2 class="title">Categories</h2>
           <ul
-            class="category-list list d-flex justify-content-between justify-content-md-around flex-wrap"
+            class="category-list list d-flex justify-content-around flex-wrap"
           ></ul>
           <button class="btn">
             <span class="text">all categories</span>
