PDP page finalize 4.6 update mobile  v

--- a/src/pdp.html
+++ b/src/pdp.html
@@ -141,7 +141,7 @@
               </div>
               <div class="col-2 d-flex d-md-none justify-content-center">
                 <ul class="icons-list list mobile">
-                  <li class="icons-item">
+                  <li class="icons-item menu-hide">
                     <a href="#" class="icon-link link">
                       <img
                         src="imgs/mobile/header/makeup-artists.svg"
@@ -343,7 +343,9 @@
                   <span class="name"
                     >Joli Color Shine long lasting lipstick</span
                   >
-                  <span class="price">$50 </span>
+                  <span class="price">
+                    <span class="price-unit">$</span> 50
+                  </span>
                 </div>
                 <div class="quiz d-flex d-flex justify-content-between item">
                   <span class="name">Quiz Cosmetic</span>
@@ -376,19 +378,17 @@
               <div
                 class="buy-product d-flex flex-column justify-content-between unit"
               >
-                <div class="d-none d-md-block quezprice-sec">
+                <div class="d-none d-md-block quezprice-sec item">
                   <div class="quezprice-sec">
-                    <div
-                      class="product-info d-flex justify-content-between item"
-                    >
+                    <div class="product-info d-flex justify-content-between">
                       <span class="name"
                         >Joli Color Shine long lasting lipstick</span
                       >
-                      <span class="price">$50 </span>
+                      <span class="price"
+                        ><span class="price-unit">$</span>50</span
+                      >
                     </div>
-                    <div
-                      class="quiz d-flex d-flex justify-content-between item"
-                    >
+                    <div class="quiz d-flex justify-content-between item">
                       <span class="name">Quiz Cosmetic</span>
                       <p class="code m-0">
                         <span class="text">Code</span> 00148
