--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
               <div class="col-2 d-flex d-md-none justify-content-center">
                 <ul class="icons-list list mobile">
                   <li class="icons-item">
-                    <a href="#" class="icon-link link">
+                    <a href="#" class="icon-link link menu-hide">
                       <img
                         src="imgs/mobile/header/makeup-artists.svg"
                         alt="makeup-artists"
