--- a/src/pdp.html
+++ b/src/pdp.html
@@ -189,10 +189,8 @@
                   </a>
                 </div> -->
 
-                <ul
-                  class="icons-list list d-flex d-md-none justify-content-between"
-                >
-                  <li class="icons-item menu-hide">
+                <ul class="icons-list list d-flex d-md-none">
+                  <li class="icons-item menu-hide m-item">
                     <a href="tel:123-456-7890" class="icon-link link"
                       ><img
                         src="imgs/mobile/header/phone.svg"
@@ -200,13 +198,14 @@
                       /><span class="icon-desc d-block">Call Us </span>
                     </a>
                   </li>
-                  <li class="icons-item cart menu-hide" data-cart="5">
+                  <li class="icons-item cart menu-hide m-item" data-cart="5">
                     <a href="#" class="icon-link link">
                       <img
                         src="imgs/mobile/header/cart.svg"
                         alt="makeup-artists"
+                        class="ml-auto d-block"
                       />
-                      <span class="icon-desc d-block">cart </span>
+                      <span class="icon-desc d-block text-right">cart </span>
                     </a>
                   </li>
                   <li class="icons-item d-none mobile-acount menu-hide ml-auto">
