PDP page finalize 4.6 update mobile  v1.1

--- a/src/pdp.html
+++ b/src/pdp.html
@@ -506,7 +506,7 @@
           </div>
         </div>
         <!-- <div class="container out-container both"> -->
-        <div class="custom-container both s-both">
+        <div class="custom-container both s-right">
           <div class="row no-gutters">
             <div class="col-md-auto d-none d-md-flex slick-space"></div>
             <div class="col slick-content">
