PDP page finalize 4.6 update mobile  v1.1

--- a/src/index.html
+++ b/src/index.html
@@ -184,10 +184,8 @@
                   </a>
                 </div> -->
 
-                <ul
-                  class="icons-list list d-flex d-md-none justify-content-between"
-                >
-                  <li class="icons-item menu-hide">
+                <ul class="icons-list list d-flex d-md-none">
+                  <li class="icons-item menu-hide m-item">
                     <a href="tel:123-456-7890" class="icon-link link"
                       ><img
                         src="imgs/mobile/header/phone.svg"
@@ -195,13 +193,14 @@
                       /><span class="icon-desc d-block">Call Us </span>
                     </a>
                   </li>
-                  <li class="icons-item cart menu-hide" data-cart="5">
+                  <li class="icons-item cart menu-hide m-item" data-cart="5">
                     <a href="#" class="icon-link link">
                       <img
                         src="imgs/mobile/header/cart.svg"
                         alt="makeup-artists"
+                        class="ml-auto d-block"
                       />
-                      <span class="icon-desc d-block">cart </span>
+                      <span class="icon-desc d-block text-right">cart </span>
                     </a>
                   </li>
                   <li class="icons-item d-none mobile-acount menu-hide ml-auto">
@@ -353,7 +352,7 @@
           </div>
         </div>
         <!-- <div class="container out-container both-sm right-md"> -->
-        <div class="custom-container right s-both">
+        <div class="custom-container right s-right">
           <div class="row no-gutters">
             <div class="col slick-content">
               <div class="slick-slider best daynamic-content"></div>
